--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <div class="uk-section uk-align-center uk-width-2-3@m uk-padding ">
         <div uk-parallax="target: h1,p; blur: 0,10;">
-            <h1 class="uk-text-center uk-heading-large shadow uk-text-bold">SMS shopping for senior</h1>
+            <h1 class="uk-text-center uk-heading-large shadow uk-text-bold">SMS Shopping for Seniors</h1>
             <h2 class="uk-text-center uk-heading-small shadow uk-text-bold ">At the time of isolation we bring together the generations</h2>
         </div>
     </div>
@@ -125,60 +125,53 @@
     <h1 class="uk-heading-bullet uk-text-bold">About The Project</h1>
     <div class="uk-padding-large uk-text-left">
         <p uk-scrollspy="cls: uk-animation-slide-left; repeat: false ;delay: 500;" class="uk-text-large">
-            The main goal of our application is and enable communication between seniors and volunteers in simple and intuitive
+            The main goal of our application is to enable communication between seniors and volunteers in a simple and intuitive
             way for both sides.
         </p>
 
         <p uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1000;" class="uk-text-large">
-            Communication is establiszed via annnouncment board where senior is able to request for shopping via SMS and volunteer, after
-            contacting with senior, will bring them just to senior\'s door.
+
+            Senior sends SMS with his shopping list, which appears on announcement borad. Volunteers can pick requests from their neighbourhood and then deliver it to seniors' door.
+
         </p>
     </div>
     <h1 class="uk-heading-bullet uk-text-bold">How it works</h1>
-    <h2 uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1000;">1. Senior send SMS with a list of needed grocery on provided
-    telephone number.
+    <h2 uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1000;">1. Senior sends SMS to a given number with his shopping list along with the name of a district that he lives in.
     </h2>
-
     <section class="uk-height-small uk-text-left uk-padding-top">
         <div class="conversation-box">
             <ul>
-                <li uk-scrollspy="cls: uk-animation-slide-right; repeat: false; delay: 1000;" class="me">Hi, I need 2l of water, 3 rolls,
-                and 1 l of oil, i live in Gansk Zaspa
-
+                <li uk-scrollspy="cls: uk-animation-slide-right; repeat: false; delay: 1500;" class="me">Hi, I need 2l of water, 3 rolls and 1 bottle of cooking oil. I live in Gdańsk Zaspa.
                 </li>
-                <li uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1000;" class="him">'Your request has been collected. We
-                are waiting for someone to take care of it
-
+                <li uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1500;" class="him">'Your request has been received. We
+                are waiting for a volunteer to come forward.
                 </li>
 
             </ul>
         </div>
     </section>
     <section class='uk-text-center uk-margin-top uk-padding-large'>
-        <h2 class="uk-margin-top" uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1000;"> 2. The volunteer finds the
-        advertisement on the map and accepts the request
-
+        <h2 class="uk-margin-top" uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1000;">2. A volunteer selects a shopping list with a suitable location from the announcement board.
         </h2>
     </section>
-    <img uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1000;"
+    <img uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 3000;"
          src="apka_mapka.png">
     <section class='uk-text-center uk-margin-top uk-padding-large'>
-        <h2 class="uk-margin-top" uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 500;">3. Volunteer provides the
-        needed products
+        <h2 class="uk-margin-top" uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 500;">3. A volunteer delivers shopping to a given address.
         </h2>
     </section>
     <img uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1000;"
          src="delivery.png">
-    <h2 uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1000;">4. Delivery message has been sent to the senior
+    <h2 uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1000;">4. Senior is asked to give feedback. He can rate the service or report a complaint.
     </h2>
     <section class="uk-height-small uk-text-left uk-padding-top">
         <div class="conversation-box">
             <ul>
-                <li uk-scrollspy="cls: uk-animation-slide-right; repeat: false; delay: 1000;" class="him">Your products should already be
+                <li uk-scrollspy="cls: uk-animation-slide-right; repeat: false; delay: 1500;" class="him">Your products should already be
                 delivered, do you have any comments ?
 
                 </li>
-                <li uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1000;"
+                <li uk-scrollspy="cls: uk-animation-slide-left; repeat: false; delay: 1500;"
                     class="me">Everything was perfect :)
 
                 </li>
@@ -186,16 +179,16 @@
             </ul>
         </div>
     </section>
-    <h1 class="uk-heading-bullet uk-text-bold">Are you a representative of an organization that runs volunteering?</h1>
+    <h1 class="uk-heading-bullet uk-text-bold">Are you a representative of volunteer organisation?</h1>
     <section id="contact" uk-height-viewport class="uk-flex uk-flex-center uk-flex-middle uk-margin-medium">
         <div class="uk-container ">
             <div class="uk-section uk-padding uk-box-shadow-medium"
-                 uk-scrollspy="cls: uk-animation-slide-bottom; target: .uk-grid-medium; delay: 500; repeat: false">
+                 uk-scrollspy="cls: uk-animation-slide-bottom; target: .uk-grid-medium; delay: 1000; repeat: false">
                 <div class="uk-grid-medium uk-align-center" uk-grid>
                     <h2 class="uk-heading-medium uk-margin-top uk-text-center">Contact with us</h2>
                     <div class="uk-divider-small uk-text-center"></div>
                     <div class="uk-width-2-3@s uk-width-1-1 uk-align-center">
-                        <form action="" class="uk-grid-small" uk-grid>
+                        <form action="mailto:obuchowskialeksander@gmail.com" class="uk-grid-small" uk-grid>
                             <div class="uk-width-1-5@s uk-width-1-1 ">
                                 <label for="fname">Name</label>
                             </div>
